# Gridalytics

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  scheduler.yml
alembic_migrations/: env.py
alembic_migrations/versions/: fb5067415f97_initial_schema.py
checkpoints/: epoch=7-step=1936.ckpt
config/: settings.py
docker/: Dockerfile.api  Dockerfile.worker
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: api.ts  hooks.ts
lightning_logs/version_0/: events.out.tfevents.1774784485.RT2004.2812.0  events.out.tfevents.1774784519.RT2004.2812.1  hparams.yaml
models/5min/lightgbm/: meta.json  model.txt  model_lower.txt  model_upper.txt
models/daily/lightgbm/: meta.json  model.txt  model_lower.txt  model_upper.txt
models/hourly/lightgbm/: meta.json  model.txt
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_model_comparison.ipynb  04_error_analysis.ipynb
scripts/: backfill_aqi.py  backfill_demand.py  backup_db.py  initial_train.py  migrate_legacy_data.py  migrate_to_supabase.py  run_optuna_tuning.py  train_5min_model.py  train_all_models.py
src/api/: auth.py  main.py  middleware.py  model_registry.py  schemas.py
src/data/: loaders.py  scheduler.py  validators.py
src/evaluation/: cross_validation.py  metrics.py
src/features/: calendar.py  pipeline.py  rolling.py  temporal.py  weather.py
src/forecasting/: future.py  tracker.py
src/models/: base.py  ensemble.py  lightgbm_model.py  lstm_model.py  neuralprophet_model.py  sarimax_model.py  xgboost_model.py
src/training/: __init__.py  alerts.py  hyperopt.py  registry.py  train.py
tests/: conftest.py  test_api.py  test_features.py  test_models.py  test_scrapers.py
(+36 files in other folders)
