[project]
name = "gridalytics"
version = "2.0.0"
description = "AI-Powered Grid Intelligence for Delhi Power Grid"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Rupesh Bharambe"}]

dependencies = [
    # Core
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.0,<2",

    # Scraping & HTTP
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.27,<1",
    "selenium>=4.18,<5",
    "pdfplumber>=0.11,<1",

    # ML - Gradient Boosting
    "lightgbm>=4.3,<5",
    "xgboost>=2.0,<3",
    "scikit-learn>=1.4,<2",
    "optuna>=3.6,<4",

    # ML - Deep Learning
    "torch>=2.2,<3",
    "pytorch-lightning>=2.2,<3",
    "pytorch-forecasting>=1.0,<2",
    "neuralprophet>=0.9,<1",

    # ML - Statistical
    "statsmodels>=0.14,<1",
    "pmdarima>=2.0,<3",

    # MLOps
    "mlflow>=2.11,<3",

    # API
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.28,<1",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",

    # Visualization
    "plotly>=5.20,<6",

    # Scheduling
    "apscheduler>=3.10,<4",

    # Holidays
    "holidays>=0.46,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
